--- a/app/views/realised_training/show.html.erb
+++ b/app/views/realised_training/show.html.erb
@@ -1,2 +1,24 @@
-<h1>RealisedTraining#show</h1>
-<p>Find me in app/views/realised_training/show.html.erb</p>
+<div class="maindiv">
+	<h1>SchauspielerIn 
+		<%=best_in_place_if signed_in?, @actor, :name%> <%= best_in_place_if signed_in?, @actor, :last_name%>
+	</h1>
+	<p>Klase <%= best_in_place_if signed_in?, @actor, :schoolclass%></p>
+	<%if signed_in? %>
+		<h2>
+			Bemerkungen
+		</h2>
+		<%= best_in_place_if signed_in?, @actor, :description, :type => :textarea%>
+	<%end%>
+	
+		
+</div>
+
+<div class="maindiv">
+	<p>	
+		<% @actor.allocations.each do |a| %>
+			<% role =  a.role%>
+			<%= link_to role.name, role_path(role.id)%>
+			in der Besetzung <%= a.cast.name %> <br />
+		<%end%>
+	</p>
+</div>
